# quake

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md  build-and-run.sh
id1/: autoexec.cfg  config.cfg
src/: adivtab.h  anorms.h  bspfile.h  cd_null.c  cd_raylib.c  cd_sdl.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_ifacea.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  (+79 more)
tools/: globals.html  main.py  pyproject.toml
tools/rf/: main.py
tools/src/: a.c  b.c
